--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Header Design</title>
+  <title>Capstone Project</title>
 </head>
 <body>
   <header class="header">
@@ -48,22 +48,30 @@
  </div>
 
 
- <div class="contact_me">
-  <h3>
-    Contact Me
-  </h3>
+<div class="footer">
+  <div class="footer-header">
+    <p>Contact Me</p>
+  </div>
 
-    <div class="contact_info">
-      <h6 class = "info">photography</h6>
-      <h6 class = "info">Team</h6>
-      <h6 class = "info">Date</h6>
-      <h6 class = "info">Nature</h6>
-      <h6 class = "info">Aurelia Green</h6>
-      <h6 class = "info">August 2023</h6>
-      <h6 class = "info">Landscapes</h6>
+  <div class="footer-info">
+    <div class="footer-items">
+      <div class="va"> <p>Photography</p></div>
+      
+      <p>Nature</p>
+      <p>Landscapes</p>
     </div>
+    <div class="footer-items">
+      <div class="va"> <p>Team</p></div>
+      
+      <p>Aurelia Green</p>
+    </div>
+    <div class="footer-items">
+      <p>Date</p>
+      <p>August 2023</p>
+    </div>
+  </div>
+</div>
 
- </div>
 
 
 
