--- a/index.html
+++ b/index.html
@@ -24,21 +24,57 @@
   </div>
 
 <div class="firstimg">
-  <img src="forest.jpeg" class = "pehla">
+  <img src="Image_1.png" class = "pehla">
 </div>
 
-<div class="baki">
-  <img src="forest.jpeg" alt="forest picture"  class = "nine">
-  <img src="forest.jpeg" alt="forest picture" class = "nine">
-  <img src="forest.jpeg" alt="forest picture" class = "nine">
-  <img src="forest.jpeg" alt="forest picture" class = "nine">
-  <img src="forest.jpeg" alt="forest picture" class = "nine">
-  <img src="forest.jpeg" alt="forest picture" class = "nine">
-  <img src="forest.jpeg" alt="forest picture" class = "nine">
-  <img src="forest.jpeg" alt="forest picture" class = "nine">
-  <img src="forest.jpeg" alt="forest picture" class = "nine">
-  
+<div class="gallery-container">
+  <div class="gallery-item">
+      <img src="image_2" alt="Forest Walk">
+      <h3>Forest Walk</h3>
+      <p>Photography</p>
+  </div>
+  <div class="gallery-item">
+      <img src="image_3" alt="Mountain Retreat">
+      <h3>Mountain Retreat</h3>
+      <p>Photography</p>
+  </div>
+  <div class="gallery-item">
+      <img src="image_4.png" alt="River Flow">
+      <h3>River Flow</h3>
+      <p>Photography</p>
+  </div>
+  <div class="gallery-item">
+      <img src="image_5.png" alt="Desert Dunes">
+      <h3>Desert Dunes</h3>
+      <p>Photography</p>
+  </div>
+  <div class="gallery-item">
+      <img src="image_6.png" alt="Ocean Breeze">
+      <h3>Ocean Breeze</h3>
+      <p>Photography</p>
+  </div>
+  <div class="gallery-item">
+      <img src="image_7.png" alt="Wildflowers">
+      <h3>Wildflowers</h3>
+      <p>Photography</p>
+  </div>
+  <div class="gallery-item">
+      <img src="image_8.png" alt="Canyon Views">
+      <h3>Canyon Views</h3>
+      <p>Photography</p>
+  </div>
+  <div class="gallery-item">
+      <img src="image_9.png" alt="Winter Wonderland">
+      <h3>Winter Wonderland</h3>
+      <p>Photography</p>
+  </div>
+  <div class="gallery-item">
+      <img src="image_10.png" alt="Sunset Glow">
+      <h3>Sunset Glow</h3>
+      <p>Photography</p>
+  </div>
 </div>
+
 
 
  <div class="final_text">
@@ -48,30 +84,30 @@
  </div>
 
 
-<div class="footer">
-  <div class="footer-header">
-    <p>Contact Me</p>
-  </div>
-
-  <div class="footer-info">
-    <div class="footer-items">
-      <div class="va"> <p>Photography</p></div>
-      
-      <p>Nature</p>
-      <p>Landscapes</p>
-    </div>
-    <div class="footer-items">
-      <div class="va"> <p>Team</p></div>
-      
-      <p>Aurelia Green</p>
-    </div>
-    <div class="footer-items">
-      <p>Date</p>
-      <p>August 2023</p>
-    </div>
-  </div>
+ <div class="container">
+  <div class="heading">Contact Me</div>
+  <table class="info-table">
+      <tr>
+          <th>Photography</th>
+          <th>Team</th>
+          <th>Date</th>
+      </tr>
+      <tr>
+          <td>Nature</td>
+          <td>Aurelia Green</td>
+          <td>August 2023</td>
+      </tr>
+      <tr>
+          <td>Landscapes</td>
+      </tr>
+  </table>
 </div>
 
+
+<div class="footer">
+  <span class="footer-text">© 2023 NaturePort</span>
+  <button class="footer-button">Contact</button>
+</div>
 
 
 
