--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Capstone Project</title>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <header class="header">
@@ -19,8 +24,7 @@
     </nav>
   </header>
   <div class="mainbody">
-    <h1>Embrace the Serenity</h1>
-    <h1>of Nature</h1>
+    <h1>Embrace the Serenity<br>of Nature</h1>
   </div>
 
 <div class="firstimg">
@@ -78,9 +82,12 @@
 
 
  <div class="final_text">
-  <p>Exploring the beauty and tranquility of the natural world <br> 
-    through photography. Each project captures the essence <br>
-     of nature's serenity and harmony</p>
+  <div class="final_1"></div>
+  <div class="final_2">
+    <p>Exploring the beauty and tranquility of the natural world <br> 
+      through photography. Each project captures the essence <br>
+      of nature's serenity and harmony</p>
+  </div>
  </div>
 
 
