--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="header">
     <div class="logo">NaturePort</div>
-    <nav class="navigation">
+    <nav class="navi">
       <ul>
         <li>Home</li>
         <li>Portfolio</li>
@@ -31,48 +31,48 @@
   <img src="Image_1.png" class = "pehla">
 </div>
 
-<div class="gallery-container">
-  <div class="gallery-item">
+<div class="ground">
+  <div class="grod">
       <img src="image_2" alt="Forest Walk">
       <h3>Forest Walk</h3>
       <p>Photography</p>
   </div>
-  <div class="gallery-item">
+  <div class="grod">
       <img src="image_3" alt="Mountain Retreat">
       <h3>Mountain Retreat</h3>
       <p>Photography</p>
   </div>
-  <div class="gallery-item">
+  <div class="grod">
       <img src="image_4.png" alt="River Flow">
       <h3>River Flow</h3>
       <p>Photography</p>
   </div>
-  <div class="gallery-item">
+  <div class="grod">
       <img src="image_5.png" alt="Desert Dunes">
       <h3>Desert Dunes</h3>
       <p>Photography</p>
   </div>
-  <div class="gallery-item">
+  <div class="grod">
       <img src="image_6.png" alt="Ocean Breeze">
       <h3>Ocean Breeze</h3>
       <p>Photography</p>
   </div>
-  <div class="gallery-item">
+  <div class="grod">
       <img src="image_7.png" alt="Wildflowers">
       <h3>Wildflowers</h3>
       <p>Photography</p>
   </div>
-  <div class="gallery-item">
+  <div class="grod">
       <img src="image_8.png" alt="Canyon Views">
       <h3>Canyon Views</h3>
       <p>Photography</p>
   </div>
-  <div class="gallery-item">
+  <div class="grod">
       <img src="image_9.png" alt="Winter Wonderland">
       <h3>Winter Wonderland</h3>
       <p>Photography</p>
   </div>
-  <div class="gallery-item">
+  <div class="grod">
       <img src="image_10.png" alt="Sunset Glow">
       <h3>Sunset Glow</h3>
       <p>Photography</p>
@@ -93,7 +93,7 @@
 
  <div class="container">
   <div class="heading">Contact Me</div>
-  <table class="info-table">
+  <table class="description">
       <tr>
           <th>Photography</th>
           <th>Team</th>
